# CKit

./: CMakeLists.txt  README.md
.cache/clangd/index/: assign.c.78BC10EECC3B26A5.idx  assign.h.86D1367D335EAAC1.idx  ast.h.94BA76E1928951B8.idx  ast_runtime.c.B7737EF5081C4A5B.idx  ast_runtime.h.B13AC6E4012E85BC.idx  binop.c.02B8A75DC7C56034.idx  binop.h.F037DB56B67395A0.idx  block.c.6CD9364F28A58851.idx  block.h.6535BE2B890B7BE4.idx  call.c.720B623749DEE8D0.idx  call.h.EFD387AEBAD84235.idx  env.c.5F43DE78984947A6.idx  env.h.DF26FB36CFBDE22C.idx  eval_context.h.432CFAB629DD600C.idx  ident.c.EA2216E7A8AC5E42.idx  ident.h.71636D7E2204F4F5.idx  lexer.c.DC38D9ED79623D73.idx  lexer.h.15996748C52F6F7B.idx  literal.c.B7A04224EAA7FB30.idx  literal.h.34A4C9681578B44B.idx  main.c.75FB978F711077AB.idx  parse_expr.c.5047188E0CD8A9AA.idx  parse_funcs.h.9CB051AF461096D7.idx  parse_stmt.c.ED4DA2D894AB28EA.idx  parse_utils.c.C1BE8BDC633EF188.idx  parser.h.B94859D6F77AB9E2.idx  register.c.5E16CFF807A0CF5E.idx  unop.c.2EE39F11CF8B1605.idx  (+2 more)
inc/: assign.h  ast.h  ast_runtime.h  binop.h  block.h  call.h  env.h  ident.h  literal.h  value.h
inc/ast/: assign.h  ast.h  ast_runtime.h  binop.h  block.h  call.h  decl.h  fndecl.h  ident.h  if.h  literal.h  unop.h  while.h
inc/environment/: env.h  eval_context.h
inc/parse/: lexer.h  parse_funcs.h  parser.h
src/: main.c  register.c
src/ast/: assign.c  ast_runtime.c  binop.c  block.c  call.c  decl.c  fndecl.c  ident.c  if.c  literal.c  unop.c  while.c
src/eval/: env.c
src/parse/: lexer.c  parse_expr.c  parse_stmt.c  parse_utils.c
